--- a/index.html
+++ b/index.html
@@ -2,25 +2,56 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <script src="ringmaker.js"></script>
 </head>
 <body>
   <nav class="navbar navbar-dark bg-dark">
     <span class="navbar-brand"> Cryptex Ring Maker </span>
   </nav>
 
-  <div id="app" class="container">
+  <div id="app" class="container main-container">
     <div class="disclaimer">
       ** Enter explaination here **
     </div>
-    <div class="cryptex-input-container">
-
+    <div class="cryptex-input-container card bg-secondary text-white">
+      <div class="card-header">
+        Cryptex Ring Configuration
+      </div>
+      <div class="card-body">
+        <div class="form-group">
+          <label for="cryptex-secret-length"> Enter Secret Length: </label>
+          <input type="text" class="form-control" id="cryptex-secret-length" placeholder="6"
+            v-model="secretLength"
+          >
+        </div>
+        <div class="form-group">
+          <label for="cryptex-word-count"> Enter Number of words to add: </label>
+          <input type="text" class="form-control" id="cryptex-word-count" placeholder="10"
+            v-model="cryptexWordCount"
+          >
+        </div>
+        <div class="form-group">
+          <label for="cryptex-word"> Word to add: </label>
+          <input type="text" class="form-control" id="cryptex-word" placeholder="lively"
+            v-model="cryptexWord"
+          >
+        </div>
+        <div class="form-group">
+          <button class="btn btn-primary"
+            @click="update"> Update </button>
+          <button class="btn btn-danger"
+            @click="reset"> Reset </button>
+        </div>
+      </div>
     </div>
-    <div class="cryptex-output-container">
 
+    <div class="cryptex-output-container card bg-light text-black">
+      <div class="card-body">
+        <p class="card-text"> {{ cryptexArray }}</p>
+      </div>
     </div>
-
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="ringmaker.js"></script>
 </body>
 </html>
