--- a/index.html
+++ b/index.html
@@ -13,11 +13,36 @@
       ** Enter explaination here **
     </div>
     <div class="cryptex-input-container card bg-secondary text-white">
+      <div class="card-header">
+        Ring Configuration
+      </div>
 
+      <div class="card-body">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text"> Secret word: </span>
+          </div>
+          <input type="text" class="form-control" id="cryptex-secret-word">
+        </div>
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text"> New word: </span>
+          </div>
+          <input type="text" class="form-control" id="cryptex-new-word">
+        </div>
+        <div class="form-group">
+          <button class="btn btn-primary"> Update </button>
+          <button class="btn btn-danger"> Reset </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-body bg-light text-dark">
+      <p class="body-text"> Output </p>
     </div>
 
     <div class="cryptex-output-container card bg-light text-black">
-      
+
     </div>
   </div>
 
